# logAndRegister

./: CMakeLists.txt  CSV_container_converter.cpp  CSV_container_converter.h  authorizator.cpp  authorizator.h  login.cpp  register.cpp  tests.cpp
logger/fileLog/: fileLogger.cpp
logger/logFactory/: logger.cpp
